added hyperlinks to training exercises at top of sections where they exist

--- a/02_introArcticdatautils.Rmd
+++ b/02_introArcticdatautils.Rmd
@@ -1,5 +1,7 @@
 #Using arcticdatautils
 
+New data team members should complete exercises [two](#exercise2) and [three](#exercise3) as part of training.
+
 ## Uploading packages using R
 
 We will be using the arcticdatautils package and the dataone package to connect to the [NSF Arctic Data Center](arcticdata.io) data repository and push and pull edits. To identify yourself as admin you will need to register a 'token' by signing in to the ADC with your [ORCiD](https://orcid.org/register), copying your token into R and telling R where to connect by defining the member node using the code below. 
@@ -81,7 +83,7 @@ set_rights_and_access(mn,
 ```
 
 
-### Exercise
+### Exercise {exercise2}
 
 * Locate the data package you published by navigating to the "my profile" section on [test.arcticdata.io](test.arcticdata.io). 
 * Download the metadata and data files and transfer them to the datateam server.
@@ -126,7 +128,7 @@ publish_update(mn,
 
 If a package is ready to be public, note that you can change the `public` argument in the `publish_update` call to `TRUE`. Similarly, if you want to publish with a DOI type identifier instead of a UUID type identifer, you can change the `use_doi` argument to `TRUE`.
 
-### Exercise
+### Exercise {exercise3}
 
 * Locate the data package you published in the previous exercise by navigating to the URL test.arcticdata.io/#view/... with the resource map pid you generated in that exercise. 
 * Download the EML to your computer, and open it in a plain text editor (TextEdit or Atom). 
