--- a/01_Introduction.Rmd
+++ b/01_Introduction.Rmd
@@ -2,6 +2,8 @@
 
 These materials are meant to introduce you to the principles of open science, effective data management, and data archival with the DataONE data repository.
 
+New data team members should complete [the exercise in this section](#exercise1) as part of training.
+
 ## Open science background reading
 
 Read the content on the Arctic Data Center (ADC) webpage to learn more about data submission, preservation, and the history of the ADC
@@ -46,7 +48,7 @@ On the servers, paths to files in your folder always start with `/home/yourusern
 When you write scripts, try to avoid writing relative paths (which rely on what you have set your working directory to) as much as possible. Instead, write out the entire path as shown above, so that if another intern or Jesse or Jeanette need to run your script, it is not dependent on a working directory.
 
 
-### Exercise
+### Exercise {#exercise1}
 
 * Use the "tabula" program to extract Table 1 from [this paper](http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta)
 * Reformat the table using R under the guidelines in the journal article on effective data management
